<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wassup</string>
    <string name="some_text">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title">Titre du évènement</string>
    <string name="location">Location</string>
    <string name="location_example">59 rue de\ncharonne Paris,\nFrance</string>
    <string name="date">Date</string>
    <string name="date_example">Sam 4 avril 2015\n10:00 am\nà\nLun 6 avril 2015\n10:00pm</string>
    <string name="friends">Participants</string>
    <string name="question">Voulez-vous y participer?</string>
    <string name="answer_yes">Je participe!</string>
    <string name="answer_friend">Proposez aux amis</string>
    <string name="info">Info pratique</string>
    <string name="description">\n- Pour cette évenement, vous pouvez&#8230;\n- Quelques lignes de description, etc.</string>
    <string name="page_indicator">Page Indicator</string>
    <string name="search_friend">Inviter les amis</string>
    <string name="added_friends">Amis ajoutés:</string>
    <string name="send">Envoyer</string>
    <string name="accept">Accepter</string>
    <string name="refuse">Refuser</string>
    <string name="compare">Comparer</string>
    <string name="refuse_text">Saisir un message</string>
    <string name="username">richard123</string>
    <string name="phone">06 24 56 12 82</string>
    <string name="email">richard123@gmail.com</string>
    <string name="notification_badge">9</string>
    <string name="deconnexion">Déconnectez-vous</string>
    <string name="keyword">Mots-clés</string>
    <string name="checked">Enregistré aux mes évenements</string>
    <string name="modifypass">Changer les mots de passe</string>

    <string-array name="menu_array">
        <item>Acceuil</item>
        <item>Mes Evénements</item>
        <item>Mes Invitations</item>
        <item>Mes Notifications</item>
        <item>Mon Compte</item>
        <item>Aide?</item>
        <item>A propos</item>
    </string-array>
    <string-array name="invite_array">
        <item>Accepté</item>
        <item>Refusé</item>
    </string-array>

    <string name="action_search">Recheche avancée</string>
    <string name="action_filter">Filtrage</string>
    <string name="event">Evénement</string>
    <string name="invitation">Invitation</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_recherche_avance">RechercheAvanceActivity</string>
    <string name="event_type">Type</string>
    <string name="event_date">Date</string>
    <string name="event_price">Tarif et Mots-clés</string>
    <string name="event_maps">Carte</string>
    <string name="title_activity_recherce_par_date">RecherceParDateActivity</string>
    <string name="title_activity_recherche_par_tarif">RechercheParTarifActivity</string>
    <string name="title_activity_recherche_par_carte">RechercheParCarteActivity</string>
    <string name="event_search">Chercher</string>
    <string name="map_ville">Ville</string>
    <string name="near_you">Autour de moi</string>
    <string name="unit_map">km(s)</string>
    <string name="connexion">ou</string>
    <string name="username2">Indentifiant</string>
    <string name="password">Mot de passe</string>
    <string name="repassword">Confirmation du mot de passe</string>
    <string name="email2">Email</string>
    <string name="connect">Connexion</string>
    <string name="register">Inscription</string>
    <string name="SelectionMode">Mode de sélection</string>
    <string name="Multiple">Multiple</string>
    <string name="Range">Gamme</string>

    <string-array name="city_arrays">
        <item>Paris</item>
        <item>Melun</item>
        <item>Versailles</item>
        <item>Évry</item>
        <item>Nanterre</item>
        <item>Bobigny</item>
        <item>Créteil</item>
        <item>Pontoise</item>
    </string-array>
    <string-array name="city_long">
        <item>2.352222</item>
        <item>2.655400</item>
        <item>2.130122</item>
        <item>2.441782</item>
        <item>2.215331</item>
        <item>2.439712</item>
        <item>2.455572</item>
        <item>2.100645</item>
    </string-array>
    <string-array name="city_lat">
        <item>48.856614</item>
        <item>48.542105</item>
        <item>48.801408</item>
        <item>48.629828</item>
        <item>48.892423</item>
        <item>48.908612</item>
        <item>48.790367</item>
        <item>49.050966</item>
    </string-array>
    <string-array name="event_long">
        <item>2.34407</item>
        <item>2.35523</item>
        <item>2.35360</item>
        <item>2.33248</item>
        <item>2.34673</item>
        <item>2.37299</item>
    </string-array>
    <string-array name="event_lat">
        <item>48.83078</item>
        <item>48.82936</item>
        <item>48.82688</item>
        <item>48.81348</item>
        <item>48.82580</item>
        <item>48.81597</item>
    </string-array>
    <string name="addToFavorite">J\'aime</string>
    <string name="result">Résultats</string>
    <string name="criteria">Critères</string>
    <string-array name="list_criterias">
        <item>trié par Prix</item>
        <item>trié par Distance</item>
    </string-array>
    <string name="chooseEvent">J\'y vais</string>

</resources>