<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/frameView"
        android:layout_width="fill_parent"
        android:layout_height="220dp"
        android:background="#7000"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/afficheView"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/some_text"
            android:scaleType="centerCrop"
            android:alpha=".75"
            android:src="@drawable/affiche_1" />
        
        <TextView
                android:id="@+id/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/white_bg"
                android:shadowColor="#000"
            	android:shadowDx="3"
            	android:shadowDy="3"
            	android:shadowRadius="6"
                android:layout_gravity="bottom"
                android:padding="5dp"
                android:textStyle="bold"
                android:textSize="32sp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

    </FrameLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:background="@color/white_bg"
        android:weightSum="1"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#BDBDBD" >

            <TextView
                android:id="@+id/textLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:background="@drawable/table_cell" 
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:background="@drawable/table_cell" 
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:minLines="3"
                android:text="@string/location_example" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:minLines="3"
                android:text="@string/date_example" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

	        <Button
	            android:id="@+id/favoriteBtn"
	            style="@style/GreenButton"
	            android:layout_marginStart="5dp"
	            android:layout_marginBottom="5dp"
	            android:text="@string/answer_yes"
	            android:textColor="@color/white_bg"/>

	        <Button
				android:id="@+id/shareBtn"
				style="@style/BlueButton"
				android:layout_marginStart="5dp"
				android:layout_marginEnd="5dp"
				android:layout_marginBottom="5dp"
				android:textColor="@color/white_bg"
				android:text="@string/answer_friend" />

	    </TableRow>

    </TableLayout>
    
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" 
            android:background="@color/white_bg"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/info"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <TextView
	            android:id="@+id/textView2"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:minLines="4"
	            android:padding="5dp"
	            android:text="@string/description" />

 	</LinearLayout>

</LinearLayout>
