<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white_bg"
    android:padding="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.70"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3" >

            <ImageButton
                android:contentDescription="@string/some_text"
                android:id="@+id/imageButton1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                            android:background="@android:color/transparent"
                
                android:src="@drawable/facebook" />

            <ImageButton
                android:contentDescription="@string/some_text"
                android:id="@+id/imageButton2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/abc_control_padding_material"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/twitter" />

            <ImageButton
                android:contentDescription="@string/some_text"
                android:id="@+id/imageButton3"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                            android:background="@android:color/transparent"
                
                android:scaleType="fitXY"
                android:src="@drawable/googleplus" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp" >

            <TextView
                android:id="@+id/step_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/connexion" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/usernameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/username2" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/passwordTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/connectBtn"
                style="@style/BlueButton"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/abc_button_padding_horizontal_material"
                android:text="@string/connect"
                android:textColor="@color/white_bg" />

            <Button
                android:id="@+id/registerBtn"
                style="@style/GrayButton"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/abc_control_padding_material"
                android:text="@string/register"
                android:textColor="@color/foursquare_blue" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>