<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:text="@string/map_ville" />

        <Spinner
            android:id="@+id/cityCombobox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:entries="@array/city_arrays"
            android:gravity="left" />

    </LinearLayout>

   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="300dp"
       android:layout_marginBottom="10dp"
       android:layout_marginTop="10dp"
       android:background="@drawable/border"
       android:orientation="vertical" >
   <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        map:cameraZoom="16"
        android:name="com.google.android.gms.maps.MapFragment"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/near_you" />

        <EditText
            android:id="@+id/nearMeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:windowSoftInputMode="adjustResize"  
            android:textColor="@color/foursquare_blue" >
            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_map" />
    </LinearLayout>

</LinearLayout>