<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dip">
    
    <ImageView
            android:id="@+id/imageView"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/some_text"
            />

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentEnd="true"
	        android:layout_below="@id/firstLine"
	        android:layout_toEndOf="@id/imageView"
	        android:orientation="vertical" >
	        
	        <TextView
		        android:id="@+id/textLine"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:lines="2"
		        android:text="@string/some_text"/>
	        
	        <TextView
		        android:id="@+id/secondLine"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:singleLine="true"
		        android:text="@string/some_text"
		        android:textSize="20sp"
		        android:textColor="#ff5500"/>

	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="end">	           
	            
	            <Button
			        android:id="@+id/btnAccept"
			        style="@style/DarkGreenButton"
			        android:paddingRight="5dp"
    				android:paddingLeft="5dp"
			        android:focusable="false"
			        android:text="@string/answer_yes" />
	            
	            <TextView
		            android:id="@+id/textResult"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginEnd="5dp"
			        android:layout_marginTop="5dp"
		            android:drawableStart="@drawable/green_check"
		            android:text="@string/checked"
		            android:visibility="gone"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
	           
	        </LinearLayout>
	    
	    </LinearLayout>
	    
	    <TextView
	        android:id="@+id/firstLine"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentEnd="true"
	        android:layout_alignParentTop="true"
	        android:layout_alignWithParentIfMissing="true"
	        android:layout_toEndOf="@id/imageView"
	        android:gravity="center_vertical"
	        android:text="@string/some_text"
	        android:textSize="16sp" />
	    

</RelativeLayout>
